# saygames-product-analytics-test

./: .gitignore  README.md  pyproject.toml
data/: retention_by_country.csv  session_duration_by_number.csv
sql/: lose_rate_by_level.sql  retention_by_country.sql  session_duration_by_number.sql
src/analytics/: lose_rate_data.py  retention_data.py  session_data.py
src/core/: config_example.py  db.py
src/dev/: test_connection.py  test_lose_rate_check.py  test_lose_rate_sql.py  test_retention_cohort.py  test_retention_sql.py  test_session_duration_cte.py  test_session_duration_sql.py
src/scripts/: export_lose_rate_to_csv.py  export_retention_to_csv.py  export_session_duration_to_csv.py
