[project]
name = "saygames-product-analytics-test"
version = "0.1.0"
description = ""
authors = [
    {name = "olyaef",email = "efimovskikh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-driver (>=0.2.10,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
